[tool.poetry]
name = "maphash"
version = "0.1.2"
description = ""
authors = ["Jakob Klepp <jakob.klepp@moonvision.io>"]
readme = "Readme.rst"

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
